fix: modify overflow issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,6 @@
 }
 
 .chatbot-side-bar-select-chat-button {
-  background-color: transparent !important;
   justify-content: start;
   margin-bottom: 11px;
 }
